Trying to make nativeRunAgent work
Faire fonctionner cette task permettrait de détecter la configuration nécessaire, mais un bug dans le plugin gradle l'empêche de fonctionner.

Common logging a été substitué par jboss logging et un adaptateur, car common logging posait des problèmes avec Quarkus et empêchait le fonctionnement de PDFBox.

Awt n'est pas fonctionnel sous Windows et Mac OS (empêchant l'application de fonctionner, avec notamment PDFBox qui n'arrive pas à faire les rendus), mais il devrait fonctionner sous Linux, ce qui devrait permettre de faire une compilation Android dans le futur, à voir.